syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "PokeshopProto";
option objc_class_prefix = "PKS";

package pokeshop;

service Pokeshop {
  rpc getPokemonList (GetPokemonRequest) returns (GetPokemonListResponse) {}
  rpc createPokemon (Pokemon) returns (Pokemon) {}
  rpc importPokemon (ImportPokemonRequest) returns (ImportPokemonRequest) {}
}

message ImportPokemonRequest {
  int32 id = 1;
  optional bool isFixed = 2;
}

message GetPokemonRequest {
  optional int32 skip = 1;
  optional int32 take = 2;
  optional bool isFixed = 3;
}

message GetPokemonListResponse {
  repeated Pokemon items = 1;
  int32 totalCount = 2;
}

message Pokemon {
  optional int32 id = 1;
  string name = 2;
  string type = 3;
  bool isFeatured = 4;
  optional string imageUrl = 5;
}
